[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "py-googletraffic"
version = "0.1.0"
description = "Create georeferenced traffic rasters from Google Maps"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Denis Juma", email = "kwanusud@gmail.com"},
]
maintainers = [
    {name = "Denis Juma", email = "kwanusud@gmail.com"},
]
keywords = ["google-maps", "traffic", "gis", "raster", "geospatial", "selenium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.0.0",
    "Pillow>=9.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.20.0",
    "geopandas>=0.10.0",
    "shapely>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
test = [
    "nose2>=0.12.0",
    "coverage>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "mock>=4.0.3",
]
jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "matplotlib>=3.5.0",
    "folium>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/kwahalf/py-googletraffic"
Documentation = "https://github.com/kwahalf/py-googletraffic#readme"
Repository = "https://github.com/kwahalf/py-googletraffic"
"Bug Tracker" = "https://github.com/kwahalf/py-googletraffic/issues"
Changelog = "https://github.com/kwahalf/py-googletraffic/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["googletraffic"]

[tool.setuptools.package-data]
googletraffic = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=googletraffic --cov-report=term-missing"

[tool.coverage.run]
source = ["googletraffic"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
